--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -29,7 +29,7 @@
                             <wm-prefab prefabname="googlemaps" name="googlemaps1" locations="bind:Variables.svcOrderLocation.dataSet.results.ORDER_STATUS" lat="TRUCK_LOCATION_LAT" lng="TRUCK_LOCATION_LNG" info="TRUCK_ID" icon="DELIVERY_TIME" zoom="10"></wm-prefab>
                         </wm-container>
                         <wm-container name="OrdersContainer">
-                            <wm-grid title="" dataset="bind:Variables.svcOrders.dataSet.results.ORDERS" navigation="Pager" name="grid1" pagesize="10" on-click="grid1Click($event, $scope, $rowData)">
+                            <wm-grid title="" dataset="bind:Variables.svcOrders.dataSet.results.ORDERS" navigation="Pager" name="grid1" pagesize="10" on-click="grid1Click($event, $scope, $rowData)" on-rowdblclick="grid1Rowdblclick($event, $scope, $rowData)">
                                 <wm-grid-column binding="ORDER_NBR" caption="Order" type="string" textalignment="center" edit-widget-type="text" show="true" readonly="false" on-click="ORDER_NBROnClick($event, $scope, rowData)"></wm-grid-column>
                                 <wm-grid-column binding="ORDER_DT" caption="Order Date" type="string" textalignment="center" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="SCHEDULE_DELIVERY_DT" caption="Delivery Date" type="string" textalignment="center" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
@@ -41,7 +41,7 @@
                             <wm-container name="OrdersByProductContainer">
                                 <wm-label padding="unset 0.5em" caption="Product:" fontweight="bold" name="label5"></wm-label>
                                 <wm-label padding="unset 0.5em" caption="bind:Variables.svcOrdersByProduct.dataSet.results.PRODUCT" name="label6"></wm-label>
-                                <wm-grid title="" dataset="bind:Variables.svcOrdersByProduct.dataSet.results.ORDERS" navigation="Pager" name="grid4_1" pagesize="10">
+                                <wm-grid title="" dataset="bind:Variables.svcOrdersByProduct.dataSet.results.ORDERS" navigation="Pager" name="grid4_1" pagesize="10" on-click="grid4_1Click($event, $scope, $rowData)">
                                     <wm-grid-column binding="ORDER_NBR" caption="Order" type="string" textalignment="center" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="DEST_FACILITY_ID" caption="Store" type="string" textalignment="center" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="SCHEDULE_DELIVERY_DT" caption="Delivery Date" type="string" textalignment="center" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
@@ -56,7 +56,8 @@
                         <wm-container name="OrdersByStoreContainer">
                             <wm-label padding="unset 0.5em" caption="Store:" fontweight="bold" name="label7"></wm-label>
                             <wm-label padding="unset 0.5em" caption="bind:Variables.svcOrdersByStore.dataSet.results.DEST_FACILITY_ID" name="label8"></wm-label>
-                            <wm-grid title="" dataset="bind:Variables.svcOrdersByStore.dataSet.results.ORDERS" navigation="Pager" name="grid5" pagesize="10" on-click="grid5Click($event, $scope, $rowData)">
+                            <wm-grid title="" dataset="bind:Variables.svcOrdersByStore.dataSet.results.ORDERS" navigation="Pager" name="grid5" pagesize="10" on-click="grid5Click($event, $scope, $rowData)" multiselect="false" radioselect="false"
+                            on-rowdblclick="grid5Rowdblclick($event, $scope, $rowData)">
                                 <wm-grid-column binding="ORDER_NBR" caption="Order" type="string" textalignment="center" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="ORDER_DT" caption="Order Date" type="string" textalignment="center" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="SHIP_FACILITY_ID" caption="Whse" type="string" textalignment="center" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
@@ -65,7 +66,7 @@
                         <wm-container name="OrdersByUserContainer">
                             <wm-label padding="unset 0.5em" caption="User:" fontweight="bold" name="label9"></wm-label>
                             <wm-label padding="unset 0.5em" caption="bind:Variables.svcOrdersByUser.dataSet.results.DW_CREATE_USER_ID" name="label10"></wm-label>
-                            <wm-grid title="" dataset="bind:Variables.svcOrdersByUser.dataSet.results.ORDERS" navigation="Pager" name="grid6" pagesize="10">
+                            <wm-grid title="" dataset="bind:Variables.svcOrdersByUser.dataSet.results.ORDERS" navigation="Pager" name="grid6" pagesize="10" on-click="grid6Click($event, $scope, $rowData)">
                                 <wm-grid-column binding="ORDER_NBR" caption="Order" type="string" textalignment="center" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="ORDER_DT" caption="Order Date" type="string" textalignment="center" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="SHIP_FACILITY_ID" caption="Whse" type="string" textalignment="center" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
@@ -77,7 +78,7 @@
                             <wm-label padding="unset 0.5em" caption="bind:Variables.svcOrdersByProductAndStore.dataSet.results.STORE" name="label12"></wm-label>
                             <wm-label padding="unset 0.5em" caption="Product:" fontweight="bold" name="label17_1"></wm-label>
                             <wm-label padding="unset 0.5em" caption="bind:Variables.svcOrdersByProductAndStore.dataSet.results.PRODUCT" name="label18_1"></wm-label>
-                            <wm-grid title="" dataset="bind:Variables.svcOrdersByProductAndStore.dataSet.results.ORDERS" navigation="Pager" pagesize="10" name="grid7">
+                            <wm-grid title="" dataset="bind:Variables.svcOrdersByProductAndStore.dataSet.results.ORDERS" navigation="Pager" pagesize="10" name="grid7" on-click="grid7Click($event, $scope, $rowData)">
                                 <wm-grid-column binding="ORDER_NBR" caption="Order" type="string" textalignment="center" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="SCHEDULE_DELIVERY_DT" caption="Delivery Date" type="string" textalignment="center" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="ITEM_DSC" caption="Item" type="string" width="30%" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
